Ignores generated html files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ RWorkspace/.Rproj.user/
 RWorkspace/.Rhistory
 RWorkspace/CheatSheets/
 *.RData
+RWorkspace/WaterAccounts.html
+RWorkspace/WaterAccounts.nb.html
+RWorkspace/WaterAccounts.nb.html
