--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ RWorkspace/CheatSheets/
 RWorkspace/WaterAccounts.html
 RWorkspace/WaterAccounts.nb.html
 RWorkspace/WaterAccounts.nb.html
+RWorkspace/ShinySandbox/.RProj.user/*
