Adds notebook to unify data dictionaries

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ RWorkspace/WaterAccounts.html
 RWorkspace/WaterAccounts.nb.html
 RWorkspace/WaterAccounts.nb.html
 RWorkspace/ShinySandbox/.RProj.user/*
+
+NoteBooks/.ipynb_checkpoints/*
